--- a/app/assets/stylesheets/tweets/tweets.css
+++ b/app/assets/stylesheets/tweets/tweets.css
@@ -1,9 +1,14 @@
+a {
+  text-decoration: none;
+}
+
 #global-container {
   background-image: url("/assets/kirei.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
+  position: relative;
 }
 
 .header {
@@ -440,9 +445,11 @@
 }
 
 #container {
-  position: relative;
-  width: 100vw;
-  height: calc(100vh - 100px);
+  position: absolute;
+  height: 80%;
+  width: 70%;
+  top: 20%;
+  left: 0%;
 }
 
 .content-text {
@@ -556,10 +563,9 @@
 }
 
 .text-area {
-  width: 60%;
-  height: calc(100vh - 100px);
+  width: 100%;
+  height: 85%;
   color: white;
-  visibility: hidden;
 }
 
 .text-all {
@@ -580,6 +586,15 @@
           align-items: center;
 }
 
+.img-field {
+  font-size: 30px;
+  margin-top: 2%;
+}
+
+.tweet-image {
+  margin: 2% 0;
+}
+
 .text1 {
   color: white;
   font-size: 30px;
@@ -597,7 +612,7 @@
   background-color: rgba(134, 132, 132, 0.1);
   color: white;
   font-size: 30px;
-  font-family: Cormorant Garamond;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .text4 {
@@ -607,7 +622,7 @@
   background-color: rgba(134, 132, 132, 0.1);
   font-size: 25px;
   color: white;
-  font-family: Cormorant Garamond;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .text5 {
