--- a/app/assets/stylesheets/users/user.css
+++ b/app/assets/stylesheets/users/user.css
@@ -1,8 +1,9 @@
 .sign-all {
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   background-color: black;
   color: white;
+  position: relative;
 }
 
 .sign-all .sign-header {
@@ -49,6 +50,7 @@
 }
 
 .new_user {
+  padding: 5% 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -102,6 +104,7 @@
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 25px;
+  outline: none;
 }
 
 label {
@@ -167,6 +170,9 @@ label {
 
 #error_explanation {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  position: absolute;
+  top: 35%;
+  left: 5%;
 }
 
 li {
