--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -18,9 +18,21 @@
       <% end %>
 
       <li class = "char2 char"><span class="char">T</span><span class="char">w</span><span class="char">e</span><span class="char">e</span><span class="char">t</span><span class="char">s</span><span class="char">L</span><span class="char">i</span><span class="char">s</span><span class="char">t</span></li>
-      <li><a href="/users/sign_up"><span class="char">S</span><span class="char">i</span><span class="char">g</span><span class="char">n</span>
-      <span class="char">u</span><span class="char">p</span></a></li>
+      
+      <% if user_signed_in? %>
+        <%# ログインしているときの表示 %>
+        <%= link_to  destroy_user_session_path do %>
+            <li><span class="char">S</span><span class="char">i</span><span class="char">g</span><span class="char">n</span><span class="char">&nbsp;</span><span class="char">o</span><span class="char">u</span><span class="char">t</span></li>
+        <% end %>
+          <%# ログアウトしている際の表示 %>
+        <% else %>
+        <%= link_to user_registration_path do %>
+          <li><span class="char">S</span><span class="char">i</span><span class="char">g</span><span class="char">n</span><span class="char">&nbsp;</span><span class="char">u</span><span class="char">p</span></li>
+        <% end %>
+      <% end %>
+      
       <li><a href="#"><span class="char">i</span><span class="char">t</span><span class="char">e</span><span class="char">m</span></a></li>
+    
     </ul>
 
     <%# トップテキスト %>
