ログイン画面の修正

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -26,11 +26,11 @@
         <% end %>
           <%# ログアウトしている際の表示 %>
         <% else %>
-        <%= link_to user_registration_path do %>
+        <%= link_to new_user_session_path do %>
           <li><span class="char">S</span><span class="char">i</span><span class="char">g</span><span class="char">n</span><span class="char">&nbsp;</span><span class="char">u</span><span class="char">p</span></li>
         <% end %>
       <% end %>
-      
+
       <li><a href="#"><span class="char">i</span><span class="char">t</span><span class="char">e</span><span class="char">m</span></a></li>
     
     </ul>
