--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -27,12 +27,12 @@
   <%# ツイート投稿機能 %>
   <div id="container">
     <div class= "text-area area-text">
-      <%= form_with model: @tweet, class: "text-all" do |f| %>
+      <%= form_with model: @tweet,　local: true, class: "text-all" do |f| %>
         <%= f.label :title, "Title", class: "text1" %><br />
         <%= f.text_field :title, class: "text3" %>
         
-        <%= f.label :image, "image", class:"img-field" %>
-        <%= f.file_field :image, multiple: true, direct_upload: true, class: "tweet-image" %>
+        <%= f.label "image", class:"img-field" %>
+        <%= f.file_field :image, class: "tweet-image" %>
 
         <%= f.label :text, "Text", class: "text2" %><br />
         <%= f.text_area :text, class: "text4" %>
@@ -40,7 +40,7 @@
         <%= f.submit "Tweet", class: "text5"%>
       <% end %>
     </div>
-   
+  </div>
 </div>
  
 
