ツイートリストのビューの編集

--- a/app/assets/stylesheets/tweets/tweets.css
+++ b/app/assets/stylesheets/tweets/tweets.css
@@ -668,6 +668,7 @@ a {
 .photo-ul .photo-text {
   color: white;
   font-size: 30px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .photo-li {
