--- a/app/assets/stylesheets/tweets/tweets.scss
+++ b/app/assets/stylesheets/tweets/tweets.scss
@@ -277,6 +277,7 @@ a {
   & .photo-text{
     color: white;
     font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
 } 
 
