--- a/app/assets/stylesheets/tweets/tweets.scss
+++ b/app/assets/stylesheets/tweets/tweets.scss
@@ -309,6 +309,92 @@ a {
   width: 150px;
 }
 
-// Calendarのビュー
+//　ツイート詳細ページのスタイル
+.tweet-show {
+  color: white;
+  height: 70%;
+  width: 70%;
+  position: absolute;
+  top: 20%;
+  left: 0%;
+  display: flex;
+  // background-color: gray;
+  padding: 2% 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  & .show-left {
+    width: 50%;
+    text-align: center;
+    border-right: 1px solid white;
+    padding: 0 2%;
+    & .show-title {
+      font-size: 1.5em;
+      padding-bottom: 1%;
+    }
+    // & .show-image {
+      
+    // }
+    & .show-text {
+      padding-top: 4%;
+      // background-color: blue;
+      height: 40%;
+      overflow: scroll;
+    }
+    & .tweets-name {
+      text-align: end;
+      .tweet-name {
+        color: white;
+        padding: 0 2%;
+        text-shadow: #FC0 1px 0 10px;
+      }
+    }
+  }
+  & .show-right {
+    width: 50%;
+    margin: 0 2%;
+    & .show-comment {
+      height: 100%;
+      & h2 {
+        text-align: center;
+        font-size: 1.5em;
+        padding-bottom: 2%;
+      }
+      & .comment-index{
+        margin: 2% 0;
+        height: 70%;
+        background-color: rgba(255, 255, 255, 0.041);
+        overflow: scroll;
+        & .comment-lists {
+          padding-bottom: 2%;
+          & .comment-user {
+            & .user-name {
+              color: white;
+              &:hover {
+                color: lightblue;
+              }
+            }
+          }
+          & .comment-text {
+            border-bottom: 1px solid white;
+            padding: 3%;
+            font-weight: 600;
+          }
+        }
+      }
+      // コメント入力欄のスタイル
+      & .comment-field {
+        width: 100%;
+        
+        & .comment-area {
+          width: 100%;
+          height: 30%;
+          font-family: Georgia, 'Times New Roman', Times, serif;
+          outline: none;
+          background-color: rgba(0, 0, 0, 0.199);
+          color: white;
+        }
+      }
+    }
+  }
+}
 
 
