ビューの修正

--- a/app/assets/stylesheets/tweets/tweets.css
+++ b/app/assets/stylesheets/tweets/tweets.css
@@ -748,70 +748,63 @@ a {
   padding-top: 4%;
   height: 40%;
   overflow: scroll;
-  height: 25%;
 }
 
-.tweet-show .show-left .show-text .show-text {
-  padding-top: 4%;
-  height: 40%;
-  overflow: scroll;
-}
-
-.tweet-show .show-left .show-text .tweets-name {
+.tweet-show .show-left .tweets-name {
   text-align: end;
 }
 
-.tweet-show .show-left .show-text .tweets-name .tweet-name {
+.tweet-show .show-left .tweets-name .tweet-name {
   color: white;
   padding: 0 2%;
   text-shadow: #FC0 1px 0 10px;
 }
 
-.tweet-show .show-left .show-right {
+.tweet-show .show-right {
   width: 50%;
   margin: 0 2%;
 }
 
-.tweet-show .show-left .show-right .show-comment {
+.tweet-show .show-right .show-comment {
   height: 100%;
 }
 
-.tweet-show .show-left .show-right .show-comment h2 {
+.tweet-show .show-right .show-comment h2 {
   text-align: center;
   font-size: 1.5em;
   padding-bottom: 2%;
 }
 
-.tweet-show .show-left .show-right .show-comment .comment-index {
+.tweet-show .show-right .show-comment .comment-index {
   margin: 2% 0;
   height: 70%;
   background-color: rgba(255, 255, 255, 0.041);
   overflow: scroll;
 }
 
-.tweet-show .show-left .show-right .show-comment .comment-index .comment-lists {
+.tweet-show .show-right .show-comment .comment-index .comment-lists {
   padding-bottom: 2%;
 }
 
-.tweet-show .show-left .show-right .show-comment .comment-index .comment-lists .comment-user .user-name {
+.tweet-show .show-right .show-comment .comment-index .comment-lists .comment-user .user-name {
   color: white;
 }
 
-.tweet-show .show-left .show-right .show-comment .comment-index .comment-lists .comment-user .user-name:hover {
+.tweet-show .show-right .show-comment .comment-index .comment-lists .comment-user .user-name:hover {
   color: lightblue;
 }
 
-.tweet-show .show-left .show-right .show-comment .comment-index .comment-lists .comment-text {
+.tweet-show .show-right .show-comment .comment-index .comment-lists .comment-text {
   border-bottom: 1px solid white;
   padding: 3%;
   font-weight: 600;
 }
 
-.tweet-show .show-left .show-right .show-comment .comment-field {
+.tweet-show .show-right .show-comment .comment-field {
   width: 100%;
 }
 
-.tweet-show .show-left .show-right .show-comment .comment-field .comment-area {
+.tweet-show .show-right .show-comment .comment-field .comment-area {
   width: 100%;
   height: 30%;
   font-family: Georgia, 'Times New Roman', Times, serif;
