--- a/app/assets/stylesheets/users/user.css
+++ b/app/assets/stylesheets/users/user.css
@@ -338,14 +338,20 @@ li {
   top: 50vh;
 }
 
-.mypage .right-mypage .profile .right-my-low .my-photo-title {
+.mypage .right-mypage .profile .right-my-low .my-photo .my-photo-title {
   margin-left: 50px;
   padding-top: 17px;
   font-size: larger;
+  padding-bottom: 3%;
 }
 
-.mypage .right-mypage .profile .right-my-low .pad {
+.mypage .right-mypage .profile .right-my-low .my-photo .pad {
   padding: 30px 0;
+}
+
+.mypage .right-mypage .profile .right-my-low .my-photo .pagination {
+  text-align: center;
+  margin-top: 3%;
 }
 
 .mypage .right-mypage .graph {
