--- a/app/assets/stylesheets/users/user.scss
+++ b/app/assets/stylesheets/users/user.scss
@@ -286,18 +286,26 @@ li {
       background-color: black;
       display: flex;
       position: absolute;
-          
-          top: 50vh;
-      & .my-photo-title {
-        margin-left: 50px;
-        padding-top: 17px;
-        font-size: larger;
-      }
-      & .pad {
-        padding: 30px 0;
+      top: 50vh;
+      & .my-photo {
+
+        & .my-photo-title {
+          margin-left: 50px;
+          padding-top: 17px;
+          font-size: larger;
+          padding-bottom: 3%;
+        }
+        & .pad {
+          padding: 30px 0;
+        }
+
+        & .pagination {
+          text-align: center;
+          margin-top: 3%;
+        }
       }
     }
-   }
+  }
   & .graph{
     position: absolute;
     top: 100px;
