--- a/app/assets/stylesheets/users/user.css
+++ b/app/assets/stylesheets/users/user.css
@@ -317,14 +317,18 @@ li {
 .mypage .right-mypage .profile .right-my-hight .profile-text {
   margin: 10px;
   height: 300px;
-  border: 2px solid white;
+  border: 1px solid white;
+  color: white;
 }
 
-.mypage .right-mypage .profile .right-my-hight .profile-text .text-deco {
-  width: 100%;
-  height: 99%;
-  border: none;
+.mypage .right-mypage .profile .right-my-hight .profile-text .profile-area {
+  width: 99.4%;
+  height: 296px;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.041);
   font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.5em;
+  color: white;
 }
 
 .mypage .right-mypage .profile .right-my-low {
