--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,11 +13,7 @@
     <div class="left-my-low">
     <ul>
       <div class="li-border">
-      <%# プロフィール編集 %>
-      <%= link_to edit_user_path  do%>
         <li class="profile-btn">Profile</li>
-      <% end %>
-
         <li class="calendar-btn">Calendar</li>
         <li class="graph-btn">Graph</li>
       </div>
@@ -33,13 +29,21 @@
             <%= link_to root_path do%>
               <span class="save-btn">Top</span>
             <% end %>
+
             <%= link_to edit_user_path(@user) do %> 
               <span class="save-btn">Edit</span>
-            <% end  %>
+            <% end %>
+
             </div>
           </div>
           <div class="profile-text">
-            <%= @user.profile %>
+            <%= form_for (@user) do |f| %>
+              <%= f.text_area :profile, class:"profile-area", method: :create %>
+              
+              <%= link_to user_path(current_user.id)  do%>
+                <%= f.submit %>
+              <% end %>
+            <% end %>
           </div>
         </div>    
         <div class="right-my-low">
