アバター、自己紹介機能の作成

--- a/app/assets/stylesheets/users/user.css
+++ b/app/assets/stylesheets/users/user.css
@@ -205,11 +205,10 @@ li {
   height: 300px;
   width: 300px;
   margin: 20px auto;
-  display: block;
   position: relative;
 }
 
-.mypage .left-mypage .left-my-hight .my-profile-img .my-avatar {
+.mypage .left-mypage .left-my-hight .my-profile-img img {
   background-color: rgba(0, 0, 0, 0.1);
   height: 100%;
   width: 100%;
@@ -319,15 +318,18 @@ li {
   height: 300px;
   border: 1px solid white;
   color: white;
+  font-size: 1.5em;
+  overflow: scroll;
+  padding: 1%;
 }
 
 .mypage .right-mypage .profile .right-my-hight .profile-text .profile-area {
   width: 99.4%;
-  height: 296px;
+  height: 265px;
   outline: none;
   background-color: rgba(255, 255, 255, 0.041);
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 1.5em;
+  font-size: 1em;
   color: white;
 }
 
