--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,9 @@
   <div class="left-mypage">
     <div class="left-my-hight">
       <div class="my-profile-img">
-        
-        <%= image_tag @user.avatar %>
+        <% if @user.avatar.attached? %>
+          <%= image_tag @user.avatar %>
+        <% end %>
         
       </div>
       <div class="nickname-border">
@@ -14,8 +15,10 @@
     <ul>
       <div class="li-border">
       <%# プロフィール編集 %>
-      <%= link_to edit_user_path  do%>
-        <li class="profile-btn">Profile</li>
+      <% if user_signed_in? && @user.id == current_user.id%>
+        <%= link_to edit_user_path  do%>
+          <li class="profile-btn">Profile</li>
+        <% end %>
       <% end %>
 
         <li class="calendar-btn">Calendar</li>
@@ -33,9 +36,11 @@
             <%= link_to root_path do%>
               <span class="save-btn">Top</span>
             <% end %>
-            <%= link_to edit_user_path(@user) do %> 
-              <span class="save-btn">Edit</span>
-            <% end  %>
+              <% if user_signed_in? && @user.id == current_user.id%>
+                <%= link_to edit_user_path(@user) do %> 
+                  <span class="save-btn">Edit</span>
+                <% end  %>
+              <% end %>
             </div>
           </div>
           <div class="profile-text">
