--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -6,7 +6,10 @@
 </div>
 
 <div class="today-weight">
-  本日の平均体重は<%= @today_weight %>kg
+  
+
+  本日の平均体重は<%= @today_weight %>
+  
 </div>
 
 <div>
@@ -14,7 +17,7 @@
   <%= area_chart Weight.group_by_day(:created_at, range: 1.weeks.ago.midnight..Time.now).average(:weight_body),
   width: "90%", height: "470px",
   xtitle: "Date",ytitle: "Weights",
-  decimal: ",",
+  # decimal: ",",
   # 小数点の設定
   messages: {empty: "入力をお願いします"}
   %>
