--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,9 @@
   <div class="left-mypage">
     <div class="left-my-hight">
       <div class="my-profile-img">
-        
-        <%= image_tag @user.avatar %>
+        <% if @user.avatar.attached? %>
+          <%= image_tag @user.avatar %>
+        <% end %>
         
       </div>
       <div class="nickname-border">
