avatarが存在しない際の表示を変更

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
       <div class="my-profile-img">
         <% if @user.avatar.attached? %>
           <%= image_tag @user.avatar %>
+          <% else %>
+          <img src="/assets/IMG_9232.JPG">
         <% end %>
         
       </div>
